tests/ui/simd/intrinsic/generic-arithmetic-2.stderr
error[E0511]: invalid monomorphization of `simd_add` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:110:9
   |
LL |         simd_add(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_sub` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:112:9
   |
LL |         simd_sub(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_mul` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:114:9
   |
LL |         simd_mul(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_div` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:116:9
   |
LL |         simd_div(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shl` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:118:9
   |
LL |         simd_shl(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shr` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:120:9
   |
LL |         simd_shr(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_and` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:122:9
   |
LL |         simd_and(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_or` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:124:9
   |
LL |         simd_or(0, 0);
   |         ^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_xor` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:126:9
   |
LL |         simd_xor(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_neg` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:129:9
   |
LL |         simd_neg(0);
   |         ^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_bswap` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:131:9
   |
LL |         simd_bswap(0);
   |         ^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_bitreverse` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:133:9
   |
LL |         simd_bitreverse(0);
   |         ^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_ctlz` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:135:9
   |
LL |         simd_ctlz(0);
   |         ^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_cttz` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:137:9
   |
LL |         simd_cttz(0);
   |         ^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shl` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:140:9
   |
LL |         simd_shl(z, z);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shr` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:142:9
   |
LL |         simd_shr(z, z);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_and` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:144:9
   |
LL |         simd_and(z, z);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_or` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:146:9
   |
LL |         simd_or(z, z);
   |         ^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_xor` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:148:9
   |
LL |         simd_xor(z, z);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_bswap` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:150:9
   |
LL |         simd_bswap(z);
   |         ^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_bitreverse` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:152:9
   |
LL |         simd_bitreverse(z);
   |         ^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_ctlz` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:154:9
   |
LL |         simd_ctlz(z);
   |         ^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_ctpop` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:156:9
   |
LL |         simd_ctpop(z);
   |         ^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_cttz` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:158:9
   |
LL |         simd_cttz(z);
   |         ^^^^^^^^^^^^

error: aborting due to 24 previous errors

For more information about this error, try `rustc --explain E0511`.
